# Interesting-programming-techniques

conditional_permission_to_call_a_base_class_method_from_a_derived_class/: README.txt  image.h  main.cpp
fix_recursive_file_inclusion/: README.txt  bar.cpp  bar.h  foo.cpp  foo.h  main.cpp  main.h
getting_result_of_multi_threading_calculation_use_the_std_future/: main.cpp
implementation_promise_and_future/: CMakeLists.txt  future.h  generic_class_of_exception.cpp  generic_class_of_exception.h  lazy.h  main.cpp  package_task.h  promise.h  shared_state.h
implementation_static_thread_pool/: CMakeLists.txt  main.cpp  static_thread_pool.cpp  static_thread_pool.h
nvi_idiom/: main.cpp
patterns/: CMakeLists.txt  command_executor.h  decorator.h  main.cpp  publisher_and_subscriber.h  visitor.h
synchronization_thread_use_condition_variable/: CMakeLists.txt  main.cpp
work_with_stack_context/: CMakeLists.txt  main.cpp
